--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -31,7 +31,8 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: .5fr 1fr;
     padding: 0 2rem;
   }
 }
