--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -5,7 +5,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
-
+@import url('base.css');
 /*****---------------------------------------- 1) font-family: 'Rajdhani', sans-serif;
  2) font-family: 'Poppins', sans-serif;
  ----------------------------------------*****/
@@ -251,50 +251,61 @@ button {
 }
 .banner_main{
     width: 100%;
-    height: 100%;
+    max-height: 100%;
 
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(auto-fill, 1fr);
+    text-align: center;
 }
 
 .banner_taital {
     width: 100%;
-    float: left;
-    font-size: 40px;
+    font-size: 60px;
     color: #679af5;
-    padding-top: 80px;
     text-transform: uppercase;
     font-weight: bold;
 
-    grid-row: 1 / 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .banner_taital_1 {
     width: 100%;
     float: left;
-    font-size: 60px;
+    font-size: 70px;
     color: #323232;
     text-transform: uppercase;
     font-weight: bold;
     line-height: 40px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner_text {
-    width: 40%;
+    min-width: 60%;
+    max-width: 80%;
     float: left;
-    font-size: 16px;
+    font-size: 26px;
+    line-height: 150%;
     color: #171616;
 
     grid-row: 3;
+    margin: auto;
 }
 .btn_main {
     max-width: 100%;
     grid-row: 4 / 5;
 
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+   justify-content: center; 
+   grid-template-columns: repeat(2, 1fr);
+   align-content: center;
 }
 .more_bt {
     width: 170px;
+    margin: auto;
 }
 
 .more_bt a {
@@ -302,7 +313,8 @@ button {
     float: left;
     font-size: 16px;
     color: #ffffff;
-    background-color: #05141f;
+    /* background-color: #05141f; */
+    background-color: var(--color-background);
     text-align: center;
     padding: 10px 0px;
     text-transform: uppercase;
@@ -313,6 +325,7 @@ button {
 }
 .contact_bt {
     width: 170px;
+    margin: auto;
 }
 .contact_bt a {
     width: 100%;
@@ -326,7 +339,7 @@ button {
 }
 .contact_bt a:hover {
     color: #ffffff;
-    background-color: #05141f;
+    background-color: var(--color-background);
 }
 #navbarSupportedContent: { display: none !important; }
 .navbar-expand-lg .navbar-nav .nav-link { display: none; }
