--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,7 @@ body{
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
 
   font-weight: normal;
   display: grid;
