--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -789,4 +789,13 @@ input.mail_text::placeholder {
  .contact_section_2{
     flex-direction: column;
  }   
+ .banner_taital{
+    font-size: 50px;
+ }
+.banner_taital_1{
+    font-size: 60px;
+} 
+ .banner_text{
+    font-size: 1.2rem;
+ }
 }
