--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -28,33 +28,33 @@
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
 
 * {
-     box-sizing: border-box !important;
-     transition: ease all 0.5s;
+    box-sizing: border-box !important;
+    transition: ease all 0.5s;
 }
 
 html {
-     scroll-behavior: smooth;
-     overflow-x: hidden !important;
+    scroll-behavior: smooth;
+    overflow-x: hidden !important;
 }
 
 body {
-     color: #666666;
-     font-size: 14px;
-     font-family: Poppins;
-     line-height: 1.80857;
-     font-weight: normal;
-     overflow-x: hidden !important;
+    color: #666666;
+    font-size: 14px;
+    font-family: Poppins;
+    line-height: 1.80857;
+    font-weight: normal;
+    overflow-x: hidden !important;
 }
 
 a {
-     color: #1f1f1f;
-     text-decoration: none !important;
-     outline: none !important;
-     -webkit-transition: all .3s ease-in-out;
-     -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
-     -o-transition: all .3s ease-in-out;
-     transition: all .3s ease-in-out;
+    color: #1f1f1f;
+    text-decoration: none !important;
+    outline: none !important;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 h1,
@@ -63,46 +63,46 @@ h3,
 h4,
 h5,
 h6 {
-     letter-spacing: 0;
-     font-weight: normal;
-     position: relative;
-     padding: 0 0 10px 0;
-     font-weight: normal;
-     line-height: normal;
-     color: #111111;
-     margin: 0
+    letter-spacing: 0;
+    font-weight: normal;
+    position: relative;
+    padding: 0 0 10px 0;
+    font-weight: normal;
+    line-height: normal;
+    color: #111111;
+    margin: 0
 }
 
 h1 {
-     font-size: 24px
+    font-size: 24px
 }
 
 h2 {
-     font-size: 22px
+    font-size: 22px
 }
 
 h3 {
-     font-size: 18px
+    font-size: 18px
 }
 
 h4 {
-     font-size: 16px
+    font-size: 16px
 }
 
 h5 {
-     font-size: 14px
+    font-size: 14px
 }
 
 h6 {
-     font-size: 13px
+    font-size: 13px
 }
 
 *,
 *::after,
 *::before {
-     -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1 a,
@@ -111,115 +111,119 @@ h3 a,
 h4 a,
 h5 a,
 h6 a {
-     color: #212121;
-     text-decoration: none!important;
-     opacity: 1
+    color: #212121;
+    text-decoration: none !important;
+    opacity: 1
 }
 
 button:focus {
-     outline: none;
+    outline: none;
 }
 
 ul,
 li,
 ol {
-     margin: 0px;
-     padding: 0px;
-     list-style: none;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
 }
 
 p {
-     margin: 20px;
-     font-weight: 300;
-     font-size: 15px;
-     line-height: 24px;
+    margin: 20px;
+    font-weight: 300;
+    font-size: 15px;
+    line-height: 24px;
 }
 
 a {
-     color: #222222;
-     text-decoration: none;
-     outline: none !important;
+    color: #222222;
+    text-decoration: none;
+    outline: none !important;
 }
 
 a,
 .btn {
-     text-decoration: none !important;
-     outline: none !important;
-     -webkit-transition: all .3s ease-in-out;
-     -moz-transition: all .3s ease-in-out;
-     -ms-transition: all .3s ease-in-out;
-     -o-transition: all .3s ease-in-out;
-     transition: all .3s ease-in-out;
+    text-decoration: none !important;
+    outline: none !important;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
 
 img {
-     max-width: 100%;
-     height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
- :focus {
-     outline: 0;
+:focus {
+    outline: 0;
 }
 
 .paddind_bottom_0 {
-     padding-bottom: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 .btn-custom {
-     margin-top: 20px;
-     background-color: transparent !important;
-     border: 2px solid #ddd;
-     padding: 12px 40px;
-     font-size: 16px;
+    margin-top: 20px;
+    background-color: transparent !important;
+    border: 2px solid #ddd;
+    padding: 12px 40px;
+    font-size: 16px;
 }
 
 .lead {
-     font-size: 18px;
-     line-height: 30px;
-     color: #767676;
-     margin: 0;
-     padding: 0;
+    font-size: 18px;
+    line-height: 30px;
+    color: #767676;
+    margin: 0;
+    padding: 0;
 }
 
 .form-control:focus {
-     border-color: #ffffff !important;
-     box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25);
+    border-color: #ffffff !important;
+    box-shadow: 0 0 0 .2rem rgba(255, 255, 255, .25);
 }
 
 .navbar-form input {
-     border: none !important;
+    border: none !important;
 }
 
 .badge {
-     font-weight: 500;
+    font-weight: 500;
 }
 
 blockquote {
-     margin: 20px 0 20px;
-     padding: 30px;
+    margin: 20px 0 20px;
+    padding: 30px;
 }
 
 button {
-     border: 0;
-     margin: 0;
-     padding: 0;
-     cursor: pointer;
+    border: 0;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
 }
+
 .full {
-     float: left;
-     width: 100%;
+    float: left;
+    width: 100%;
 }
 
 .layout_padding {
-     padding-top: 90px;
-     padding-bottom: 0px;
+    padding-top: 90px;
+    padding-bottom: 0px;
 }
-.padding_0{
+
+.padding_0 {
     padding: 0px;
 }
-.padding_left_0{
+
+.padding_left_0 {
     padding-left: 100px;
 }
+
 .header_section {
     width: 100%;
     float: left;
@@ -228,17 +232,20 @@ button {
     background-size: 100%;
     padding-bottom: 90px;
 }
-.header_bg{
-  padding: 0px;
+
+.header_bg {
+    padding: 0px;
 }
+
 .logo {
     width: 100%;
     float: left;
 }
 
 .bg-light {
-    background-color: transparent!important;
+    background-color: transparent !important;
 }
+
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 13px;
     padding-left: 13px;
@@ -246,10 +253,13 @@ button {
     color: #2e2d2e;
     text-transform: uppercase;
 }
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
     color: #1b5a8d;
 }
-.banner_main{
+
+.banner_main {
     width: 100%;
     max-height: 100%;
 
@@ -269,11 +279,12 @@ button {
     justify-content: center;
     align-items: center;
 }
+
 .banner_taital_1 {
     width: 100%;
     float: left;
     font-size: 70px;
-    color: var(--color-background);
+    color: #262525;
     text-transform: uppercase;
     font-weight: bold;
     line-height: 40px;
@@ -294,70 +305,89 @@ button {
     grid-row: 3;
     margin: 1% auto 5% auto;
 }
+
 .btn_main {
     max-width: 100%;
     grid-row: 4 / 5;
 
     display: grid;
-   justify-content: center; 
-   grid-template-columns: repeat(2, 1fr);
-   align-content: center;
+    justify-content: center;
+    grid-template-columns: repeat(2, 1fr);
+    align-content: center;
 }
+
 .more_bt {
     width: 170px;
     margin: auto;
+
+    border: 1px solid #262525;
 }
 
 .more_bt a {
     width: 100%;
     float: left;
     font-size: 16px;
-    color: #ffffff;
-    /* background-color: #05141f; */
+    color: #262525;
+    background-color: #05141f;
     background-color: var(--color-background);
     text-align: center;
     padding: 10px 0px;
     text-transform: uppercase;
 }
+
 .more_bt a:hover {
-    color: #262525;
-    background-color: #ffffff;
+    color: #fff;
+    background-color: #262525;
     border: 1px solid #262525;
 }
+
 .contact_bt {
     width: 170px;
     margin: auto;
 }
+
 .contact_bt a {
     width: 100%;
     float: left;
     font-size: 16px;
-    color: #000;
-    background-color: #ffffff;
+    color: #fff;
+    background-color: #262525;
     text-align: center;
     padding: 10px 0px;
     text-transform: uppercase;
 }
+
 .contact_bt a:hover {
-    color: #ffffff;
     background-color: var(--color-background);
+    color: #262525;
+    border: 1px solid #262525;
 }
-#navbarSupportedContent: { display: none !important; }
-.navbar-expand-lg .navbar-nav .nav-link { display: none; }
-.costume_header{ 
-    width: 100%; 
+
+#navbarSupportedContent {
+    display: none !important;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    display: none;
+}
+
+.costume_header {
+    width: 100%;
     float: left;
     background-color: #05141f;
     height: auto;
 }
-.menu_main{ 
-    width: 70%; 
+
+.menu_main {
+    width: 70%;
     float: left;
 }
-.menu_main ul{ 
+
+.menu_main ul {
     margin: 0px;
     padding: 0px;
 }
+
 .menu_main li {
     float: left;
     font-size: 16px;
@@ -365,44 +395,54 @@ button {
     text-transform: uppercase;
     padding: 8px 15px;
 }
+
 .menu_main li.active {
     background-color: #c9e5fb;
     color: #000 !important;
 }
+
 .menu_main li a {
     color: #ffffff;
     padding: 11px 20px;
 }
-.menu_main li a:hover{
-    color: #ffffff; 
-    background-color: #c9e5fb;   
+
+.menu_main li a:hover {
+    color: #ffffff;
+    background-color: #c9e5fb;
 }
-.menu_main_1{ 
-    width: 30%; 
+
+.menu_main_1 {
+    width: 30%;
     float: left;
 }
-.menu_main_1 ul{ 
+
+.menu_main_1 ul {
     margin: 0px;
     padding: 0px;
 }
-.menu_main_1 li{
+
+.menu_main_1 li {
     float: left;
     font-size: 16px;
     color: #ffffff;
     text-transform: uppercase;
-    padding: 8px 28px;    
+    padding: 8px 28px;
 }
-.menu_main_1 li a{
+
+.menu_main_1 li a {
     color: #ffffff;
 }
-.about_section{
-  width: 100%;
-  float: left;
+
+.about_section {
+    width: 100%;
+    float: left;
 }
-.image_1{
-  width: 100%;
-  float: left;
+
+.image_1 {
+    width: 100%;
+    float: left;
 }
+
 .about_taital {
     width: 100%;
     float: left;
@@ -411,6 +451,7 @@ button {
     font-weight: bold;
     padding-top: 70px;
 }
+
 .about_text {
     width: 100%;
     float: left;
@@ -437,17 +478,20 @@ button {
     text-transform: uppercase;
     border: 1px solid #05141f;
 }
+
 .read_bt a:hover {
     color: #000;
     background-color: transparent;
     border: 1px solid #000;
 }
-.services_section{
-  width: 100%;
-  float: left;
-  position: relative;
-  padding-top: 30px;
+
+.services_section {
+    width: 100%;
+    float: left;
+    position: relative;
+    padding-top: 30px;
 }
+
 .services_section::after {
     content: '';
     position: absolute;
@@ -459,6 +503,7 @@ button {
     top: 0;
     z-index: -1;
 }
+
 .services_taital {
     width: 100%;
     float: left;
@@ -466,11 +511,13 @@ button {
     color: #05141f;
     font-weight: 600;
 }
+
 .image_2 {
     width: 80%;
     float: left;
     padding-left: 120px;
 }
+
 .box_main {
     width: 100%;
     float: left;
@@ -479,6 +526,7 @@ button {
     padding: 20px;
     margin-top: 50px;
 }
+
 .technology_text {
     width: 100%;
     float: left;
@@ -487,6 +535,7 @@ button {
     margin-left: 0px;
     font-weight: 500;
 }
+
 .dummy_text {
     width: 100%;
     float: left;
@@ -512,38 +561,44 @@ button {
     padding: 10px 0px;
     border: 1px solid #05141f;
 }
+
 .readmore_bt a:hover {
     color: #000;
     background-color: transparent;
     border: 1px solid #000;
 }
+
 .software_section {
     width: 100%;
     float: left;
     padding-bottom: 90px;
 }
-.software_taital{
-  width: 100%;
-  float: left;
-  font-size: 36px;
-  color: #030000;
-  text-align: center;
-  font-weight: 600;
+
+.software_taital {
+    width: 100%;
+    float: left;
+    font-size: 36px;
+    color: #030000;
+    text-align: center;
+    font-weight: 600;
 }
-.software_text{
-  width: 50%;
-  margin: 0 auto;
-  font-size: 16px;
-  color: #545455;
-  text-align: center;
+
+.software_text {
+    width: 50%;
+    margin: 0 auto;
+    font-size: 16px;
+    color: #545455;
+    text-align: center;
 }
-.software_section_2{
-  width: 100%;
-  float: left;
+
+.software_section_2 {
+    width: 100%;
+    float: left;
 }
-.image_6{
-  width: 100%;
-  float: left;
+
+.image_6 {
+    width: 100%;
+    float: left;
 }
 
 .ipsum_text {
@@ -556,24 +611,27 @@ button {
     bottom: -4px;
 }
 
-.owl-item > div {
-  cursor: pointer;
-  margin: 6% 8%;
-  transition: margin 0.4s ease;
-}
-.owl-item.center > div {
-  cursor: auto;
-  margin: 0;
-}
-.owl-item:not(.center) > div:hover {
-  opacity: .75;
+.owl-item>div {
+    cursor: pointer;
+    margin: 6% 8%;
+    transition: margin 0.4s ease;
 }
 
-.works_section{
-  width: 100%;
-  float: left;
-  position: relative;
+.owl-item.center>div {
+    cursor: auto;
+    margin: 0;
 }
+
+.owl-item:not(.center)>div:hover {
+    opacity: .75;
+}
+
+.works_section {
+    width: 100%;
+    float: left;
+    position: relative;
+}
+
 .work_taital {
     width: 100%;
     float: left;
@@ -582,11 +640,13 @@ button {
     text-align: center;
     font-weight: 600;
 }
-.works_section_2{
-  width: 100%;
-  float: left;
+
+.works_section_2 {
+    width: 100%;
+    float: left;
 
 }
+
 .works_section:after {
     content: '';
     position: absolute;
@@ -599,14 +659,15 @@ button {
     left: 0;
 }
 
-.fully_text{
-  width: 100%;
-  float: left;
-  font-size: 20px;
-  color: #171717;
-  text-transform: uppercase;
-  font-weight: 500;
+.fully_text {
+    width: 100%;
+    float: left;
+    font-size: 20px;
+    color: #171717;
+    text-transform: uppercase;
+    font-weight: 500;
 }
+
 .lorem_text {
     width: 100%;
     float: left;
@@ -616,27 +677,31 @@ button {
     margin-top: 0px;
 }
 
-.contact_section{
-  width: 100%;
-  float: left;
+.contact_section {
+    width: 100%;
+    float: left;
 }
-.contact_section_2{
-  width: 100%;
-  background-color: #f9f9fb;
-  height: auto;
-  margin-top: 50px;
 
-  display: flex;
+.contact_section_2 {
+    width: 100%;
+    background-color: #f9f9fb;
+    height: auto;
+    margin-top: 50px;
+
+    display: flex;
 }
-.image_10{
-  width: 100%;
-  float: left;
+
+.image_10 {
+    width: 100%;
+    float: left;
 }
+
 .email_text {
     width: 90%;
     float: left;
     padding: 50px 20px 20px 20px;
 }
+
 .email-bt {
     width: 100%;
     float: left;
@@ -646,9 +711,11 @@ button {
     padding: 10px 15px;
     border: 0px;
 }
+
 input.email-bt::placeholder {
     color: #2a2a2c;
 }
+
 .massage-bt {
     width: 100%;
     float: left;
@@ -658,14 +725,17 @@ input.email-bt::placeholder {
     padding: 10px 15px;
     border: 0px;
 }
+
 textarea#comment::placeholder {
     color: #2a2a2c;
 }
+
 .send_btn {
     width: 170px;
     float: right;
 }
-.send_btn a{
+
+.send_btn a {
     width: 100%;
     float: right;
     text-align: center;
@@ -675,12 +745,14 @@ textarea#comment::placeholder {
     padding: 10px;
     border-radius: 5px;
 }
-.footer_section{
-  width: 100%;
-  float: left;
-  background-color: #2a2a2c;
-  height: auto;
+
+.footer_section {
+    width: 100%;
+    float: left;
+    background-color: #2a2a2c;
+    height: auto;
 }
+
 .address_text {
     width: 100%;
     float: left;
@@ -688,6 +760,7 @@ textarea#comment::placeholder {
     color: #fffcf4;
     text-transform: uppercase;
 }
+
 .dolor_text {
     width: 100%;
     float: left;
@@ -696,6 +769,7 @@ textarea#comment::placeholder {
     padding-top: 10px;
     margin: 0px;
 }
+
 .mail_text {
     width: 100%;
     float: left;
@@ -708,13 +782,16 @@ textarea#comment::placeholder {
     border-radius: 20px;
     border: 0px;
 }
+
 input.mail_text::placeholder {
     color: #2b2c2c;
 }
+
 .subscribe_bt {
     width: 100%;
     float: left;
 }
+
 .subscribe_bt a {
     width: 170px;
     float: left;
@@ -727,11 +804,13 @@ input.mail_text::placeholder {
     margin-top: 22px;
     border-radius: 20px;
 }
+
 .footer_logo {
     width: 100%;
     float: left;
     padding-bottom: 5px;
 }
+
 .social_icon {
     width: 80%;
     margin: 0 auto;
@@ -740,11 +819,13 @@ input.mail_text::placeholder {
     text-align: center;
     margin-bottom: 40px;
 }
+
 .social_icon ul {
     margin: 0px;
     padding: 0px;
     display: inline-block;
 }
+
 .social_icon li {
     float: left;
     padding: 20px 3px 0px 3px;
@@ -758,6 +839,7 @@ input.mail_text::placeholder {
     text-align: center;
     color: #ffffff;
 }
+
 .copyright_text {
     width: 100%;
     float: left;
@@ -767,35 +849,42 @@ input.mail_text::placeholder {
     margin-left: 0px;
     padding: 10px 0px;
 }
-.copyright_text a{
+
+.copyright_text a {
     color: #000
 }
-.copyright_text a:hover{
+
+.copyright_text a:hover {
     color: #679af5;
 }
 
-.margin_90{
-  margin: 90px 0px;
+.margin_90 {
+    margin: 90px 0px;
 }
-.margin_top_80{
-  margin-top: 80px;
+
+.margin_top_80 {
+    margin-top: 80px;
 }
-.margin_top_0{
-  margin-top: 0px;
+
+.margin_top_0 {
+    margin-top: 0px;
 }
 
 
 @media (max-width: 600px) {
- .contact_section_2{
-    flex-direction: column;
- }   
- .banner_taital{
-    font-size: 50px;
- }
-.banner_taital_1{
-    font-size: 60px;
-} 
- .banner_text{
-    font-size: 1.2rem;
- }
+    .contact_section_2 {
+        flex-direction: column;
+    }
+
+    .banner_taital {
+        font-size: 50px;
+    }
+
+    .banner_taital_1 {
+        font-size: 60px;
+    }
+
+    .banner_text {
+        font-size: 1.2rem;
+    }
 }
