--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,9 @@
 @import './base.css';
 
-body{
+body {
   min-height: 100vh;
 }
+
 #app {
   width: 100%;
   max-width: 100%;
@@ -12,7 +13,7 @@ body{
   font-weight: normal;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
   padding: 0 3%;
 
   background-image: url('/src/assets/images/banner-bg.png');
